[project]
name = "libretro.py"
dynamic = ["version"]
description = "A libretro frontend for Python intended for testing cores."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Jesse Talavera", email = "jesse@jesse.tg"},
]
maintainers = [
    {name = "Jesse Talavera", email = "jesse@jesse.tg"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Framebuffer",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["libretro", "retroarch", "emulation", "testing", "retrogaming"]
dependencies = [
    "typing_extensions == 4.*; python_version < '3.13'",
]

[project.optional-dependencies]
build = [
    'build == 1.4.2',
    'setuptools>=82.0.1',
    'twine == 6.2.0',
    'pre-commit == 3.7.*',
]
cli = [
    'typer == 0.25.1',
]
dev = [
    'pyright == 1.1.*',
    "ruff == 0.15.*",
    "libretro.py[build,docs]"
]
docs = [
    'Sphinx == 9.1.0',
    'sphinx-autobuild == 2025.8.25',
    'sphinx-copybutton == 0.5.2',

    # Need this fix for https://github.com/click-contrib/sphinx-click/issues/159
    "sphinx-click@git+https://github.com/dionhaefner/sphinx-click#egg=82fed75",
    'furo == 2025.12.19',

    # Need to use this commit because the most recent release
    # is old and won't work with our version of Sphinx
    'sphinxcontrib-prettyspecialmethods@git+https://github.com/sphinx-contrib/prettyspecialmethods#egg=38fb1b',
    'sphinx-autodoc-typehints == 3.10.2',
]
doc = ["libretro.py[docs]"] # Alias for the docs extra
opengl = [
    'moderngl[headless] >= 5.12',
    'PyOpenGL == 3.1.*',
]
opengl-window = [
    'moderngl-window == 3.*',
    "libretro.py[opengl]"
]
all = ["libretro.py[build,cli,dev,docs,opengl,opengl-window]"]

[project.urls]
Homepage = "https://github.com/JesseTG/libretro.py"
Issues = "https://github.com/JesseTG/libretro.py/issues"
Repository = "https://github.com/JesseTG/libretro.py"
Changelog = "https://github.com/JesseTG/libretro.py/blob/master/CHANGELOG.md"

[build-system]
requires = [
    "build == 1.4.2",
    "setuptools>=82.0.1",
    "twine == 6.2.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
# default value of select is ["E4", "E7", "E9", "F"]
# these type codes describe flake8-style linting rules
# that ruff implements equivalents for
extend-select = [
    "ARG", # flake8-unused-arguments
    "D", # pydocstyle
    "I", # isort
    "S1", # flake8-bandit (basic security checks)
]

ignore = [
    "S101", # Allow asserts for checking invariants
    "D203",
    "D205", # We use semantic linebreaks for docstrings, which violate PEP 257
    "D212",

    # Ruff linter rules that conflict with the formatter
    # (see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q", # flake8-quotes
    "COM812",
    "COM819",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F403"] # "from module import *" is common for __init__.py files
"src/libretro/api/input/**" = ["E741"] # Some input-related libretro.h symbols are single-letter (minus prefixes)
"setup.py" = ["D100"]
"docs/conf.py" = ["D100"]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".git",
    ".venv",
    "venv-windows",
    "docs",
    "build",
]
include = [
    "src/libretro/**",
    "docs/*.py",
]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportImportCycles = true
reportCallInDefaultInitializer = "information"
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = true
reportUnnecessaryIsInstance = false
reportUnusedImport = "warning"
reportUnnecessaryComparison = false
reportUnknownParameterType = true
reportMissingParameterType = true
reportDeprecated = "warning"
