[project]
name = "libretro.py"
dynamic = ["version"]
description = "A libretro frontend for Python intended for testing cores."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jesse Talavera", email = "jesse@jesse.tg" }]
maintainers = [{ name = "Jesse Talavera", email = "jesse@jesse.tg" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Framebuffer",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["libretro", "retroarch", "emulation", "testing", "retrogaming"]
dependencies = ["typing_extensions == 4.*; python_version < '3.13'"]

[dependency-groups]
docs = [
    'Sphinx == 9.1.0',
    'sphinx-autobuild == 2025.8.25',
    'sphinx-copybutton == 0.5.2',

    # Need this fix for https://github.com/click-contrib/sphinx-click/issues/159
    "sphinx-click@git+https://github.com/dionhaefner/sphinx-click#egg=82fed75",
    'furo == 2025.12.19',

    # Need to use this commit because the most recent release
    # is old and won't work with our version of Sphinx
    'sphinxcontrib-prettyspecialmethods@git+https://github.com/sphinx-contrib/prettyspecialmethods#egg=38fb1b',
    'sphinx-autodoc-typehints == 3.10.2',
]
# Alias for "docs" because I'd always mix them up
doc = [{ include-group = "docs" }]
build = ['build == 1.4.2', 'twine == 6.2.0', 'pre-commit == 3.7.*']
lint = ['pyright == 1.1.*', "ruff == 0.15.*"]
test = [
    "pytest == 9.0.3",
    "pytest-xdist == 3.8.0",
    "pytest-isolated == 0.4.4",
    "Pillow == 12.2.0",
    "numpy == 2.4.6",
    "hypothesis == 6.152.9",
    "pytest_assert_type == 0.1.5",
]
dev = [
    { include-group = "docs" },
    { include-group = "build" },
    { include-group = "lint" },
    { include-group = "test" },
]

[project.optional-dependencies]

cli = ['typer == 0.25.1']
opengl = ['moderngl[headless] >= 5.12', 'PyOpenGL == 3.1.*']
opengl-window = ['moderngl-window == 3.*', "libretro.py[opengl]"]
all = ["libretro.py[cli,opengl,opengl-window]"]

[project.urls]
Homepage = "https://github.com/JesseTG/libretro.py"
Issues = "https://github.com/JesseTG/libretro.py/issues"
Repository = "https://github.com/JesseTG/libretro.py"
Changelog = "https://github.com/JesseTG/libretro.py/blob/master/CHANGELOG.md"

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.20"
build-dir = "build/{wheel_tag}"
# Cores are plain shared libraries with no Python ABI dependency, so a single
# wheel works across every CPython interpreter on the same platform.
wheel.py-api = "py3"
wheel.packages = ["src/libretro"]
sdist.include = ["CHANGELOG.md", "cmake/**", "cores/**", "CMakeLists.txt"]
sdist.exclude = ["build/**", ".venv/**", "venv-*/**", ".thx/**"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CHANGELOG.md"
regex = '## \[(?P<value>\d+\.\d+\.\d+)\]'

# Pure-Python fallback: if CMake configure/build fails (no toolchain, unsupported
# platform), produce a wheel without sample cores rather than failing the install.
[[tool.scikit-build.overrides]]
if.failed = true
wheel.cmake = false

# Explicit pure-Python build: setting ``LIBRETRO_PY_PURE_PYTHON=1`` in the
# build environment skips CMake entirely. CI uses this to publish a
# ``py3-none-any`` fallback wheel alongside the platform wheels.
[[tool.scikit-build.overrides]]
if.env.LIBRETRO_PY_PURE_PYTHON = true
wheel.cmake = false

[tool.scikit-build.cmake.define]
ZLIB_USE_STATIC_LIBS = true

[tool.cibuildwheel]
test-groups = ["test"]
test-extras = ["all"]
test-command = "pytest {project}"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
# default value of select is ["E4", "E7", "E9", "F"]
# these type codes describe flake8-style linting rules
# that ruff implements equivalents for
extend-select = [
    "ARG", # flake8-unused-arguments
    "D",   # pydocstyle
    "I",   # isort
    "S1",  # flake8-bandit (basic security checks)
]

ignore = [
    "S101", # Allow asserts for checking invariants
    "D203",
    "D205", # We use semantic linebreaks for docstrings, which violate PEP 257
    "D212",

    # Ruff linter rules that conflict with the formatter
    # (see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",      # flake8-quotes
    "COM812",
    "COM819",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F403",
] # "from module import *" is common for __init__.py files
"src/libretro/api/input/**" = [
    "E741",
] # Some input-related libretro.h symbols are single-letter (minus prefixes)
"docs/conf.py" = ["D100"]
"tests/**" = ["D"] # test modules don't require docstrings

[tool.pytest]
minversion = "9.0"
addopts = ["--doctest-modules", "--doctest-glob=*.rst"]
strict_markers = true
strict_config = true
testpaths = ["tests", "src"]
markers = [
    "isolated: run the test in a fresh subprocess (provided by pytest-isolated)",
    "opengl: requires the libretro.py[opengl] extra and a working GL context",
    "slow: long-running; excluded from PR CI by default",
]
required_plugins = ["pytest-assert-type", "hypothesis", "pytest-isolated"]
norecursedirs = [
    "_darcs",
    ".*",
    "{arch}",
    "*.egg",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    "venv-*",
    "__pycache__",
    "*.egg-info",
]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".git",
    ".venv",
    "venv-windows",
    "docs",
    "build",
]
include = ["src/libretro/**", "tests/**", "docs/*.py"]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportImportCycles = true
reportCallInDefaultInitializer = "information"
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = true
reportUnnecessaryIsInstance = false
reportUnusedImport = "warning"
reportUnnecessaryComparison = false
reportUnknownParameterType = true
reportMissingParameterType = true
reportDeprecated = "warning"
